# swuleague

./: .gitignore  CLAUDE.md  README.md  data.py  drawing.py  image.py  parse_melee.py  pyproject.toml  theme.py
.github/workflows/: generate.yml
data/all4play/: etape_01.csv
data/cercle-du-jeu/: etape_01.csv
data/set-7/all4play/: etape_01.csv  etape_02.csv  etape_03.csv  etape_04.csv  etape_05.csv  etape_06.csv  recrutement.csv
data/set-7/cercle-du-jeu/: etape_01.csv  etape_02.csv  etape_03.csv  etape_04.csv  etape_05.csv  etape_06.csv  recrutement.csv
data/set-7/sortileges-perpignan/: etape_03.csv  etape_04.csv  etape_05.csv  recrutement.csv
data/set-7/test/: etape_01.csv  etape_02.csv  etape_03.csv
data/test/: etape_01.csv  etape_02.csv
